--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,34 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>图书管理系统</title>
+	<link rel="stylesheet" type="text/css" href="/css/login.css">
+	<link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap.min.css">
+</head>
+<body>
+	<div class="login">
+		<form>
+		  <div class="form-group">
+		    <label for="exampleInputEmail1">Email address</label>
+		    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+		  </div>
+		  <div class="form-group">
+		    <label for="exampleInputPassword1">Password</label>
+		    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+		  </div>
+		  <div class="form-group">
+			    <label for="loginCaptcha">验证码</label>
+			    <div class="input-group">
+			      <input type="text" class="form-control captcha-input"placeholder="请输入验证码">
+				  <span class="input-group-addon" id="result">正确</span>
+				</div>
+				<div class="captcha"></div>
+			</div>
+		  <button type="button" class="btn btn-default">登录</button>
+		</form>
+	</div>
+</body>
+<script src="libs/jquery/jquery-1.12.4.min.js" type="text/javascript" ></script>
+<script src="libs/bootstrap/js/bootstrap.js" type="text/javascript" ></script>
+</html>
