--- a/public/html/manager/manager.html
+++ b/public/html/manager/manager.html
@@ -110,6 +110,7 @@
 </body>
 <script src="/libs/jquery/jquery-1.12.4.min.js" type="text/javascript" ></script>
 <script src="/libs/bootstrap/js/bootstrap.js" type="text/javascript" ></script>
+<script src="/js/header/register.js"></script>
 <script src="/js/header/header.js"></script>
 
 </html>
