--- a/public/html/user/user.html
+++ b/public/html/user/user.html
@@ -61,6 +61,8 @@
 </body>
 <script src="/libs/jquery/jquery-1.12.4.min.js" type="text/javascript" ></script>
 <script src="/libs/bootstrap/js/bootstrap.js" type="text/javascript" ></script>
+<script src="/js/header/register.js"></script>
 <script src="/js/header/header.js"></script>
+
 
 </html>
