--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,21 @@
 	<link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
+	<div class="alert alert-danger hidden login-error">用户名或密码错误</div>
 	<div class="login">
-		<form>
+		<form class="login-form">
+			<select class="form-control" name="level">
+			  <option value="0">用户</option>
+			  <option value="1">管理员</option>
+			</select>
 		  <div class="form-group">
-		    <label for="exampleInputEmail1">Email address</label>
-		    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+		    <label for="exampleInputEmail1">账号</label>
+		    <input type="email" class="form-control" name="name" id="exampleInputEmail1" placeholder="请输入账号">
 		  </div>
 		  <div class="form-group">
-		    <label for="exampleInputPassword1">Password</label>
-		    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-		  </div>
-		  <div class="form-group">
+		    <label for="exampleInputPassword1">密码</label>
+		    <input type="password" class="form-control" name="password" id="exampleInputPassword1" placeholder="请输入密码">
+		     <div class="form-group">
 			    <label for="loginCaptcha">验证码</label>
 			    <div class="input-group">
 			      <input type="text" class="form-control captcha-input"placeholder="请输入验证码">
@@ -25,10 +29,12 @@
 				</div>
 				<div class="captcha"></div>
 			</div>
-		  <button type="button" class="btn btn-default">登录</button>
+		  </div>
+		  <button type="button" class="btn btn-default login-btn">登录</button>
 		</form>
 	</div>
 </body>
 <script src="libs/jquery/jquery-1.12.4.min.js" type="text/javascript" ></script>
 <script src="libs/bootstrap/js/bootstrap.js" type="text/javascript" ></script>
+<script src="js/index.js"></script>
 </html>
