综合项目第一次

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 <body>
 	<div class="alert alert-danger hidden login-error">用户名或密码错误</div>
 	<div class="login">
+		<a  data-toggle="modal" data-target="#RegModal" class="register" href="javascript:">还没有账号？注册一个</a>
 		<form class="login-form">
 			<select class="form-control" name="level">
 			  <option value="0">用户</option>
@@ -36,5 +37,6 @@
 </body>
 <script src="libs/jquery/jquery-1.12.4.min.js" type="text/javascript" ></script>
 <script src="libs/bootstrap/js/bootstrap.js" type="text/javascript" ></script>
+<script src="js/header/register.js"></script>
 <script src="js/index.js"></script>
 </html>
