--- a/public/html/user/user.html
+++ b/public/html/user/user.html
@@ -13,10 +13,10 @@
 	<content>
 		<!--列表导航-->
 		<ul class="nav nav-pills nav-stacked" style="width: 200px;float: left;">
-		  <li role="presentation" class=" active"><a class="book-details" href="javascript:void(0);">图书详情</a></li>
-		  <li role="presentation"><a class="userinfo" href="javascript:void(0);">个人信息</a></li>
-		  <li role="presentation"><a class="book-details" href="javascript:void(0);">借阅信息</a></li>
-		  <li role="presentation"><a class="change-password" href="javascript:void(0);">修改密码</a></li>
+		  <li role="presentation" class="tab active"><a class="book-details" href="javascript:void(0);"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>&nbsp;&nbsp;图书详情</a></li>
+		  <li role="presentation" class="tab"><a class="userinfo" href="javascript:void(0);"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp;&nbsp;个人信息</a></li>
+		  <li role="presentation" class="tab"><a class="book-details" href="javascript:void(0);"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>&nbsp;&nbsp;借阅信息</a></li>
+		  <li role="presentation" class="tab"><a class="change-password" href="javascript:void(0);"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span>&nbsp;&nbsp;修改密码</a></li>
 		</ul>
 		<div  style="position: fixed;top:10%;left:40%;width: 20%;" class="alert alert-danger hidden update-error">修改失败</div>
 		<div  style="position: fixed;top:10%;left:40%;width: 20%;" class="alert alert-success hidden update-success">修改成功</div>
@@ -26,11 +26,28 @@
 		  <div class="panel-heading">
 			  <h3 class="panel-title">图书信息</h3>
 			</div>
+			<div class="container-fluid" style="height: 50px;margin-top: 20px;">
+		   		<div class="btn-group" style="float: left;">
+					<button type="button" class="btn btn-primary dropdown-toggle thistype" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">图书编号<span class="caret"></span></button>
+					<ul class="dropdown-menu chooseType">
+						<li><a href="#" class="_id">图书编号</a></li>
+					    <li><a href="#" class="name">图书名称</a></li>
+					    <li><a href="#" class="type">图书类型</a></li>
+					</ul>
+				</div>
+				<div class="input-group col-lg-4" style="float: left;">
+				    <input type="text" class="form-control findCondition" placeholder="输入搜索内容">
+				    	<span class="input-group-btn">
+				        	<button class="btn btn-default find" type="button">搜索</button>
+				    	</span>
+				</div>
+			    <button type="button" class="btn btn-primary reload" style="float: right;margin-right: 20px;" >重新加载全部图书信息</button>
+			</div>
 			<div class="panel-body">
-			  <table class="table table-striped">
+			  <table class="table table-striped book-table">
 			  	<thead>
 					<tr>
-						<td>书籍编号</td>
+						<td>图书编号</td>
 						<td>封面</td>
 						<td>图书名称</td>
 						<td>图书类型</td>
@@ -44,9 +61,14 @@
  					
  				</tbody>
 				</table>
+				<!--分页按钮-->
+				<nav aria-label="Page navigation" class="paginationHide">
+					<ul class="pagination pull-right">
+					 </ul>
+				</nav>
 			</div>
 		</div>
-
+		
 
 		<div class="panel panel-primary box hidden" style="margin-left: 220px;min-height: 500px;">
 		  <div class="panel-heading">
@@ -79,7 +101,7 @@
 			  <table class="table table-striped">
 			  	<thead>
 					<tr>
-						<td>书籍编号</td>
+						<td>图书编号</td>
 						<td>书名</td>
 						<td>类型</td>
 						<td>价钱</td>
@@ -103,7 +125,10 @@
 			 
 			</div>
 		</div>
-			
+		
+		<!--错误提示-->
+		<div class="allAlter"></div>
+		
 		</div>
 
 
@@ -147,6 +172,8 @@
 	    </div><!-- /.modal-content -->
 	  </div><!-- /.modal-dialog -->
 	</div><!-- /.modal -->
+	
+	
 	</content>
 
 
