--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 			    <label for="loginCaptcha">验证码</label>
 			    <div class="input-group">
 			      <input type="text" class="form-control captcha-input"placeholder="请输入验证码">
-				  <span class="input-group-addon" id="result">正确</span>
+				  <span class="input-group-addon" id="result">未输入验证码</span>
 				</div>
 				<div class="captcha"></div>
 			</div>
