--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
 			      <input type="text" class="form-control captcha-input"placeholder="请输入验证码">
 				  <span class="input-group-addon" id="result">未输入验证码</span>
 				</div>
-				<div class="captcha"></div>
+				<div class="captcha" style="width: 150px;height: 50px;float: left;"></div>
+				<a class="recaptcha" href="javascript:0" style="line-height: 54px">看不清？换一张</a>
 			</div>
 		  </div>
 		  <button type="button" class="btn btn-default login-btn">登录</button>
