--- a/public/html/user/user.html
+++ b/public/html/user/user.html
@@ -98,16 +98,13 @@
 			  <h3 class="panel-title">借阅信息</h3>
 			</div>
 			<div class="panel-body">
-			  <table class="table table-striped">
+			  <table class="table table-striped table-borrowBook">
 			  	<thead>
 					<tr>
 						<td>图书编号</td>
 						<td>书名</td>
-						<td>类型</td>
-						<td>价钱</td>
-						<td>出版社</td>
 						<td>借阅时间</td>
-						<td>还书</td>
+						<td>操作</td>
 					</tr>
 				</thead>
  				<tbody>
@@ -120,10 +117,6 @@
 		<div class="panel panel-primary box hidden" style="margin-left: 220px;min-height: 500px;">
 			  <div class="panel-heading">
 				  <h3 class="panel-title">修改密码</h3>
-				</div>
-				<div class="panel-body">
-				 <div class="panel-heading">
-				    <h3 class="panel-title">修改密码</h3>
 				</div>
 				<div class="panel-body">
 				    <form class="password-form" style="width: 500px;margin: 50px auto;padding: 50px;border: 2px solid #337AB7;border-radius: 10px;">
