--- a/public/html/manager/manager.html
+++ b/public/html/manager/manager.html
@@ -14,7 +14,8 @@
 		<!--列表导航-->
 		<ul class="nav nav-pills nav-stacked change-content" style="width: 200px;float: left;">
 		  <li role="presentation" class="active"><a href="javascript:void(0);"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>&nbsp;&nbsp;图书管理</a></li>
-		  <li role="presentation"><a href="javascript:void(0);"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp;&nbsp;用户管理</a></li>
+		  <li role="presentation"><a href="javascript:void(0);"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>&nbsp;&nbsp;用户管理</a></li>
+		  <li role="presentation"><a href="javascript:void(0);"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp;&nbsp;个人管理</a></li>
 		  <li role="presentation "><a href="javascript:void(0);"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span>&nbsp;&nbsp;修改密码</a></li>
 		</ul>
 		<!--图书信息管理-->
@@ -40,23 +41,25 @@
 			    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal" style="float: right;">添加</button>
 			    <button type="button" class="btn btn-primary reload" style="float: right;margin-right: 40px;" >重新加载全部图书信息</button>
 			</div>
-		  	<table class="table table-striped book-table">
-		    	<thead>
-					<tr>
-						<td>图书编号</td>
-						<td>封面</td>
-						<td>图书名称</td>
-						<td>图书类型</td>
-						<td>数量</td>
-						<td>价格</td>
-						<td>出版社</td>
-						<td>操作</td>
-					</tr>
-				</thead>
- 				<tbody></tbody>
- 			</table>
+			<div class="panel-body">
+			  	<table class="table table-striped book-table">
+			    	<thead>
+						<tr>
+							<td>图书编号</td>
+							<td>封面</td>
+							<td>图书名称</td>
+							<td>图书类型</td>
+							<td>数量</td>
+							<td>价格</td>
+							<td>出版社</td>
+							<td>操作</td>
+						</tr>
+					</thead>
+	 				<tbody></tbody>
+	 			</table>
+	 		</div>
 			<!--分页按钮-->
-				<nav aria-label="Page navigation" class="paginationHide" style="position: absolute;bottom:10%;right: 5%;">
+				<nav aria-label="Page navigation" class="paginationHide" style="position: absolute;bottom:4%;right: 5%;">
 					<ul class="pagination">
 					 </ul>
 				</nav>
@@ -68,30 +71,55 @@
 			<div class="panel-heading">
 		    	<h3 class="panel-title">用户信息管理</h3>
 		  	</div>
-		  	<div class="alert alert-danger hidden addmanager-error">添加管理员失败</div>
-		  	<div class="alert alert-success hidden addmanager-success">添加管理员成功</div>
-		  	<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addmanagerModal" style="float: right;margin: 10px 0;margin-right: 10px">添加新管理员</button>
-
-				<table class="table table-striped user-table">
-		    	<thead>
-					<tr>
-						<td>用户名</td>
-						<td>性别</td>
-						<td>年龄</td>
-						<td>电话</td>
-						<td>注册时间</td>
-						<td>借书信息</td>
-						<td>操作</td>
-					</tr>
-				</thead>
- 				<tbody></tbody>
- 			</table>
+		  	<div class="panel-body">
+			 	 <table class="table table-striped user-table" style="margin-top: 50px;">
+			    	<thead>
+						<tr>
+							<td>用户名</td>
+							<td>性别</td>
+							<td>年龄</td>
+							<td>电话</td>
+							<td>注册时间</td>
+							<td>借书信息</td>
+						</tr>
+					</thead>
+	 				<tbody></tbody>
+	 			</table>
+	 		</div>
 			<!--分页按钮-->
-				<nav aria-label="Page navigation" class="paginationHide" style="position: absolute;bottom:10%;right: 5%;">
+				<nav aria-label="Page navigation" class="paginationHide" style="position: absolute;bottom:4%;right: 5%;">
 					<ul class="pagination new-pagination">
 					 </ul>
 				</nav>
 			</div>
+		</div>
+		<!--个人信息-->
+		<div class="panel panel-primary person_manage" style="left: 220px;min-height: 500px;right: 20px;position: absolute;display: none;">
+		  	<div class="panel-heading">
+		    	<h3 class="panel-title">个人信息</h3>
+		  	</div>
+		  	<div class="alert alert-danger hidden addmanager-error">添加管理员失败</div>
+		  	<div class="alert alert-success hidden addmanager-success">添加管理员成功</div>
+		  	<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addmanagerModal" style="float: right;margin: 10px 0;margin-right: 10px">添加新管理员</button>
+
+			<div class="panel-body">
+			  	<table class="table table-striped manager-table">
+			  		<thead>
+						<tr>
+							<td>用户名称</td>
+							<td>性别</td>
+							<td>年龄</td>
+							<td>电话</td>
+							<td>注册时间</td>
+							<td>操作</td>
+						</tr>
+					</thead>
+	 				<tbody>
+	 					
+	 				</tbody>
+				</table>
+			</div>
+		</div>
 		<!--密码信息管理-->
 		<div class="panel panel-primary pwd_manage" style="left: 220px;min-height: 500px;right: 20px;position: absolute;display: none;">
 			<div class="panel-heading">
@@ -105,7 +133,7 @@
 				  </div>
 				  <div class="form-group">
 				    <label for="newPwd">新密码</label>
-				    <input type="password" class="form-control" name="newPwd" placeholder="请输入新密码">
+				    <input type="password" class="form-control" name="newPwd" id="newPwd" placeholder="请输入新密码">
 				  </div>
 				  <div class="form-group">
 				    <label for="againNewPwd">再次输入新密码</label>
@@ -116,6 +144,10 @@
 			</div>
 		</div>	
 	</content>
+	<!--信息提示框-->
+	<div  style="position: fixed;top:10%;left:40%;width: 20%;" class="alert alert-danger hidden update-error">修改失败</div>
+		<div  style="position: fixed;top:10%;left:40%;width: 20%;" class="alert alert-success hidden update-success">修改成功</div>
+		<div>
 	<!-- 添加图书的模态框 -->
 	<div class="modal fade" id="addModal" tabindex="-1" role="dialog">
 	  <div class="modal-dialog" role="document">
@@ -276,6 +308,39 @@
 	    </div>
 	  </div>
 	</div>
+	<!--修改管理员信息模态框-->
+	<div class="modal fade" id="updateManagerModal" tabindex="-1" role="dialog">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title">修改用户信息</h4>
+	      </div>
+	      <div class="modal-body">
+	        <form class="update-form">
+			  <div class="form-group">
+			    <label for="nowManagerName">用户名</label>
+			    <input type="text" class="form-control" name="name" readonly="readonly" id="nowManagerName">
+			  </div>
+			  <div class="form-group">
+			    <label for="nowManagerSex">性别</label>
+			    <input type="text" class="form-control" name="sex" placeholder="输入性别" id="nowManagerSex">
+			  </div>
+			   <div class="form-group">
+			    <label for="nowManagerAge">年龄</label>
+			    <input type="text" class="form-control" name="age" placeholder="输入年龄" id="nowManagerAge">
+			  </div>
+			  <div class="form-group">
+			    <label for="nowManagerTel">电话</label>
+			    <input type="text" class="form-control" name="tel" placeholder="输入电话号码" id="nowManagerTel">
+			  </div>  
+			</form>
+	      <div class="modal-footer">
+	        <button type="button" class=" btn btn-primary update-btn">修改</button>
+	      </div>
+	    </div><!-- /.modal-content -->
+	  </div><!-- /.modal-dialog -->
+	</div><!-- /.modal -->
 
 </body>
 <script src="/libs/jquery/jquery-1.12.4.min.js" type="text/javascript" ></script>
