--- a/public/html/user/user.html
+++ b/public/html/user/user.html
@@ -126,7 +126,7 @@
 					  </div>
 					  <div class="form-group">
 					    <label for="newPwd">新密码</label>
-					    <input type="password" class="form-control" name="newPwd" placeholder="请输入新密码">
+					    <input type="password" class="form-control" name="newPwd" id="newPwd" placeholder="请输入新密码">
 					  </div>
 					  <div class="form-group">
 					    <label for="againNewPwd">再次输入新密码</label>
