zsy修改提示框 注册

--- a/public/html/user/user.html
+++ b/public/html/user/user.html
@@ -170,14 +170,14 @@
 			    <input type="text" class="form-control" name="tel" placeholder="输入电话号码">
 			  </div>  
 			</form>
-			<div class="form-group">
+			<!-- <div class="form-group">
 			    <label for="loginCaptcha">验证码</label>
 			    <div class="input-group">
 			      <input type="text" class="form-control captcha-input"placeholder="请输入验证码">
 				  <span class="input-group-addon" id="result">正确</span>
 				</div>
 				<div class="captcha"></div>
-			</div>
+			</div> -->
 	      <div class="modal-footer">
 	        <button type="button" class=" btn btn-primary update-btn">修改</button>
 	      </div>
