--- a/public/html/manager/manager.html
+++ b/public/html/manager/manager.html
@@ -345,6 +345,7 @@
 </body>
 <script src="/libs/jquery/jquery-1.12.4.min.js" type="text/javascript" ></script>
 <script src="/libs/bootstrap/js/bootstrap.js" type="text/javascript" ></script>
+<script src="/js/header/time.js"></script>
 <script src="/js/header/header.js"></script>
 <script src="/js/manager/manager.js"></script>
 
